--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                               <div class="row">
                                  <div class="col-md-6">
                                     <div class="banner_taital_main">
-                                       <h3 class="banner_text">Hello, am <br>Akuso Ezekiel
-                                       <span style="color: #f5c729;">Sunday</span></h3>
-                                       <h1 class="banner_taital">Data Analyst/ Scientist</h1>
+                                       <h3 class="banner_text" style="text-shadow: 10px 5px 10px black;">Hello, am <br>Akuso Ezekiel
+                                       <span style="color: #f5c729;text-shadow:5px 2px 5px black;">Sunday</span></h3>
+                                       <h1 class="banner_taital" style="text-shadow: 10px 5px 10px black;">Data Analyst/ Scientist</h1>
                                     </div>
                                  </div>
                                  <div class="col-md-6">
